--- a/src/main/resources/static/productList.css
+++ b/src/main/resources/static/productList.css
@@ -6,10 +6,14 @@ body{
 .shell{
   padding:80px 0;
 }
+/*
 .selected > .wsk-cp-product > .wsk-cp-text {
     background-color: #ffcccb !important;
 }
-
+*/
+.selected {
+    background-color: #ffcccb;
+}
 .wsk-cp-product{
   background:#fff;
   padding:15px;
@@ -226,9 +230,7 @@ a.buy-btn{
   background: #FF9800;
   color: #fff;
 }
-.selected {
-    background-color: #ffcccb;
-}
+
 /*.selected > .wsp-cp-product > .wsp-cp-text {
     background-color: #ffcccb !important;
 }*/
