--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -65,28 +65,29 @@
 <script th:inline="javascript">
     var selectedProducts = [];
 
-    function seleccionarProducto(row, productId, input) {
+    function seleccionarProducto(row, idProduct, input) {
         // Obtener el valor del campo de entrada de número específico
-        var cantidad = parseInt(input.value);
+        var quantity = parseInt(input.value);
 
         // Cambiar el color de fondo para indicar selección
-        row.classList.toggle('selected', cantidad > 0);
+        row.classList.toggle('selected', quantity > 0);
         // Después de aplicar la clase 'selected'
         row.offsetHeight;
 
         // Actualizar la cantidad de productos seleccionados
-        var index = selectedProducts.findIndex(item => item.productId === productId);
+        var index = selectedProducts.findIndex(item => item.idProduct === idProduct);
         if (index !== -1) {
             // Si el producto ya está en la lista, actualizar la cantidad
-            if (cantidad > 0) {
-                selectedProducts[index].cantidad = cantidad;
+            if (quantity > 0) {
+                selectedProducts[index].idSupermarket = [[${supermarketId}]];
+                selectedProducts[index].quantity = quantity;
             } else {
                 // Si la cantidad es 0, quitar el producto de la lista
                 selectedProducts.splice(index, 1);
             }
-        } else if (cantidad > 0) {
+        } else if (quantity > 0) {
             // Si el producto no está en la lista y la cantidad es mayor que 0, agregarlo
-            selectedProducts.push({ productId: productId, cantidad: cantidad });
+            selectedProducts.push({ idSupermarket: [[${supermarketId}]],idProduct: idProduct, quantity: quantity });
         }
 
         // Imprimir en la consola la lista de productos seleccionados (para fines de demostración)
@@ -99,6 +100,7 @@
             var xhr = new XMLHttpRequest();
             xhr.open("POST", "/saveProductListController", true);
             xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.setRequestHeader('dataType', 'json');
             // Configurar una función de devolución de llamada para manejar la respuesta
             xhr.onload = function () {
                 if (xhr.status === 200) {
