--- a/src/main/resources/templates/dashboardProducts.html
+++ b/src/main/resources/templates/dashboardProducts.html
@@ -16,5 +16,38 @@
         <span th:text="${product.idProduct} + ' ' + ${product.idSupermarket}"></span>
     </li>
 </ul>
+<div>
+    <canvas id="myChart"></canvas>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script th:inline="javascript">
+    // Obtener datos de tu controlador de Spring y convertirlos a formato adecuado para Chart.js
+    var chartData = /*[[${chartData}]]*/ [];
+
+    // Configurar el gráfico
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'bar', // Tipo de gráfico (puedes cambiarlo según tus necesidades)
+        data: {
+            labels: chartData.labels,
+            datasets: [{
+                label: 'Comida',
+                data: chartData.data,
+                backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                borderColor: 'rgba(75, 192, 192, 1)',
+                borderWidth: 1,
+                datalabels: {
+                    display: true,
+                    anchor: 'end', // Puedes ajustar esto según tus necesidades
+                    align: 'top', // Puedes ajustar esto según tus necesidades
+                }
+            }]
+        },
+        options: {
+            // Opciones de configuración adicionales según tus necesidades
+        }
+    });
+</script>
 </body>
 </html>
