--- a/src/main/resources/templates/dashboardProducts.html
+++ b/src/main/resources/templates/dashboardProducts.html
@@ -17,37 +17,49 @@
     </li>
 </ul>
 <div>
-    <canvas id="myChart"></canvas>
+    <canvas id="shoppingChart"></canvas>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script th:inline="javascript">
-    // Obtener datos de tu controlador de Spring y convertirlos a formato adecuado para Chart.js
-    var chartData = /*[[${chartData}]]*/ [];
+    var hiperdinoData = /*[[${hiperdinoChartData}]]*/ [];
+    var mercadonaData = /*[[${mercadonaChartData}]]*/ [];
+    var tuTrebolData = /*[[${tuTrebolChartData}]]*/ [];
 
-    // Configurar el gráfico
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar', // Tipo de gráfico (puedes cambiarlo según tus necesidades)
-        data: {
-            labels: chartData.labels,
-            datasets: [{
-                label: 'Comida',
-                data: chartData.data,
-                backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                borderColor: 'rgba(75, 192, 192, 1)',
-                borderWidth: 1,
-                datalabels: {
-                    display: true,
-                    anchor: 'end', // Puedes ajustar esto según tus necesidades
-                    align: 'top', // Puedes ajustar esto según tus necesidades
+    var ctx = document.getElementById('shoppingChart').getContext('2d');
+
+    // Crea el objeto de configuración del gráfico
+        var chartConfig = {
+            type: 'bar', // Tipo de gráfico (puedes cambiarlo según tus necesidades)
+            data: {
+                labels: hiperdinoData.labels || mercadonaData.labels || tuTrebolData.labels,
+                datasets: [{
+                    label: 'Hiperdino',
+                    data: hiperdinoData.data,
+                },
+                {
+                    label: 'Mercadona',
+                    data: mercadonaData.data,
+                },
+                {
+                    label: 'Tu Trebol',
+                    data: tuTrebolData.data,
+                }]
+                // Puedes agregar más datasets si tienes más datos
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
                 }
-            }]
-        },
-        options: {
-            // Opciones de configuración adicionales según tus necesidades
-        }
-    });
+            }
+        };
+
+        // Crea el gráfico
+        var myChart = new Chart(ctx, chartConfig);
+
+
 </script>
 </body>
 </html>
