--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -16,10 +16,21 @@
     <div id="loadingIndicator" style="display: none;">
         <img th:src="@{/static/img/spinning.gif}" alt="Indicador de trabajo">
     </div>
-    <div id="error-message" class="error-message" style="display: none;"></div>
+    <div id="messages" class="messages" style="display: none;"></div>
     <!--    <a th:href="@{/mercadona/update}" class="wsk-btn">Actualizar BD</a>-->
     <button id="updateButton" class="wsk-btn">Actualizar BD</button>
-    <button id="showProductsButton" class="wsk-btn" onclick="sendProductList()">Mostrar Productos Seleccionados</button>
+    <button id="showProductsButton" class="wsk-btn" onclick="sendProductList()">Cuadro de Mando</button>
+    <button id="deleteSelectedList" class="wsk-btn" onclick="deleteProductList()">Borrar Listas</button>
+</div>
+<div class="container text-center" style="margin-top: 15px;">
+    <div class="row">
+        <div class="col-md-6">
+            <p th:text="'Hay ' + ${#lists.size(products)} + ' productos'"></p>
+        </div>
+        <div class="col-md-6">
+            <p id="selectedProductsText"></p>
+        </div>
+    </div>
 </div>
 
 <div class="shell">
@@ -65,6 +76,15 @@
 <script th:inline="javascript">
     var selectedProducts = [];
 
+    function actualizarTextoProductosSeleccionados() {
+        var selectedProductsText = document.getElementById('selectedProductsText');
+        var cantidadProductosSeleccionados = selectedProducts.reduce(function (total, producto) {
+            return total + producto.quantity;
+        }, 0);
+
+        selectedProductsText.innerText = 'Productos seleccionados: ' + cantidadProductosSeleccionados;
+    }
+
     function seleccionarProducto(row, idProduct, input) {
         // Obtener el valor del campo de entrada de número específico
         var quantity = parseInt(input.value);
@@ -92,6 +112,7 @@
 
         // Imprimir en la consola la lista de productos seleccionados (para fines de demostración)
         console.log('Productos seleccionados:', selectedProducts);
+        actualizarTextoProductosSeleccionados();
     }
 
     function sendProductList() {
@@ -143,10 +164,55 @@
                     $("#loadingIndicator").hide();
                     $("#updateButton").show();
                     // Puedes agregar un mensaje de error o realizar otras acciones según tus necesidades
-                    $("#error-message").text("Error al actualizar la base de datos. Inténtalo de nuevo.").show();
+                    $("#messages").text("Error al actualizar la base de datos. Inténtalo de nuevo.").show();
             });
         });
     });
+</script>
+<script th:inline="javascript">
+    function deleteProductList() {
+        // Muestra el mensaje
+        showMessage('Productos Seleccionados borrados');
+
+        // Realiza la solicitud al controlador
+        fetch('/deleteProductListController', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+        })
+        .then(response => response.text())
+        .then(data => {
+            // Puedes hacer algo con la respuesta del servidor
+            // Por ejemplo, mostrar un mensaje al usuario
+            showMessage(data);
+
+            // Oculta el mensaje después de 5 segundos
+            setTimeout(() => {
+                hideMessage();
+            }, 5000);
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            // Muestra un mensaje de error y lo oculta después de 5 segundos
+            showMessage('Hubo un error al borrar los productos seleccionados');
+            setTimeout(() => {
+                hideMessage();
+            }, 5000);
+        });
+    }
+
+    function showMessage(message) {
+        var messagesDiv = document.getElementById('messages');
+        messagesDiv.innerHTML = message;
+        messagesDiv.style.display = 'block';
+    }
+
+    function hideMessage() {
+        var messagesDiv = document.getElementById('messages');
+        messagesDiv.innerHTML = '';
+        messagesDiv.style.display = 'none';
+    }
 </script>
 </body>
 </html>
